// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaabegynteSoknader empty array 1`] = `null`;

exports[`PaabegynteSoknader green test 1`] = `null`;

exports[`PaabegynteSoknader one soknad 1`] = `
<a
  className="message clickable"
  data-ga="Dittnav/Varsel/Paabegynt soknad"
  href="http://nav.no"
>
  <span
    aria-label="dokument-ikon"
    className="icon document-icon"
  />
  <div
    className="texts"
  >
    <p>
      <span>
        Du har en søknad som du ikke har sendt
      </span>
    </p>
    <p
      id="paabegynte-tekst"
    >
      <span>
        Fortsett innsending
      </span>
    </p>
  </div>
</a>
`;

exports[`PaabegynteSoknader several soknader 1`] = `
<a
  className="message clickable"
  data-ga="Dittnav/Varsel/Paabegynt soknad"
  href="https://tjenester-t6.nav.no/"
>
  <span
    aria-label="dokument-ikon"
    className="icon document-icon"
  />
  <div
    className="texts"
  >
    <p>
      <span>
        Du har tre søknader som du ikke har sendt
      </span>
    </p>
    <p
      id="paabegynte-tekst"
    >
      <span>
        Fortsett innsending
      </span>
    </p>
  </div>
</a>
`;
